--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ Thank you for visiting my portfolio! I am excited to connect and collaborate on 
             ratione vel inventore labore commodi modi quos culpa aut saepe!
             Alias!
           </p>
-          <a href="www.kwarastatepolytechnic.edu.ng" target="" class="">Check it Out</a>
+          <a href="https://kwarastatepolytechnic.edu.ng" target="" class="">Check it Out</a>
         </div>
         <div class="project-container project-card">
           <img
@@ -239,7 +239,7 @@ Thank you for visiting my portfolio! I am excited to connect and collaborate on 
             I graduated from Kwara State Polytechnic, Ilorin.
 			where i obtained Higher National Diplomer in Electrical & Electronics Technology
           </p>
-          <a href="#" target="_blank" class="education-link">Check it Out</a>
+          <a href="https://kwarastatepolytechnic.edu.ng" target="_blank" class="education-link">Check it Out</a>
         </div>
         <div class="education-container education-card">
           <img
