--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ Thank you for visiting my portfolio! I am excited to connect and collaborate on 
             ratione vel inventore labore commodi modi quos culpa aut saepe!
             Alias!
           </p>
-          <a href="https://kwarastatepolytechnic.edu.ng" target="" class="">Check it Out</a>
+          <a href="https://github.com/yusciti/Flood-Prediction/tree/master/FloodPrediction" target="" class="">Check it Out</a>
         </div>
         <div class="project-container project-card">
           <img
@@ -219,13 +219,13 @@ Thank you for visiting my portfolio! I am excited to connect and collaborate on 
             ratione vel inventore labore commodi modi quos culpa aut saepe!
             Alias!
           </p>
-          <a href="#" target="_blank" class="project-link">Check it Out</a>
+          <a href="https://github.com/yusciti/Bike_Rentals/tree/main/BikeRentals" target="_blank" class="project-link">Check it Out</a>
         </div>
       </div>
     </section>
 	 <!-- Education section -->
     <section class="educations" id="educations">
-      <h2 class="educations-title">Education & Qualifications</h2>
+      <h2 class="educations-title">Education & CERTIFICATION</h2>
       <div class="educations-container">
         <div class="education-container education-card">
           <img
@@ -265,7 +265,7 @@ Thank you for visiting my portfolio! I am excited to connect and collaborate on 
           <p class="education-details">
             I joined the Udacity Nano degree program through Access Bank Scholarship where I obtained Data Analytics certification 
           </p>
-          <a href="#" target="_blank" class="education-link">Check it Out</a>
+          <a href="https://www.udacity.com/certificate/LKHANSVH" target="_blank" class="education-link">Check it Out</a>
         </div>
       </div>
     </section>
@@ -330,9 +330,9 @@ Thank you for visiting my portfolio! I am excited to connect and collaborate on 
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://twitter.com/yusupht" target="_blank"
         ><img
-          src="files/icons/icons8-instagram.gif"
+          src="files/icons/facebook.svg"
           alt="Instagram"
           loading="lazy"
           class="socicon"
@@ -344,7 +344,7 @@ Thank you for visiting my portfolio! I am excited to connect and collaborate on 
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="https://twitter.com/koladechris" target="_blank"
+      <a href="https://Linkedin.com/in/yusuf-taopheeqy-baab2280" target="_blank"
         ><img src="files/icons/icons8-github.gif" alt="Github" class="socicon"
       /></a>
     </div>
@@ -362,7 +362,7 @@ Thank you for visiting my portfolio! I am excited to connect and collaborate on 
       <p class="copy">&copy; Copyright 2021</p>
       <p class="copy">
         Built with &#x2661; by
-        <a href="https://twitter.com/koladechris" target="_blank"
+        <a href="https://twitter.com/YTaopheeq" target="_blank"
           >Yusuf Taofik (Yuscity)</a
         >
       </p>
